# PrimeFactorizationAndAnalytics-WebApp

./: README.md  requirements.txt
my-app/: pyproject.toml
my-app/src/: agi.py  main.py  runShorAlgoForEvenNo.py  shorEvenAlgo.py  wordhoard_error.yaml
