[project]
name = "my-prime-factorization-app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2",
  "mpire==2.10.2",
  "sympy==1.14.0"

]


[tool.flet]
org = "com.klcomp"
product = "Prime Factorization"
company = "KL Comp."
copyright = "Copyright (C) 2026 KL Comp."


[tool.flet.app]
path = "src"

[tool.flet.android]
split_per_abi = true

[tool.flet.ios]
supports_tablet = true

